fixed height on safari

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -184,7 +184,7 @@ h3 {
   width: 100%;
   border-radius: 10px;
   background-image: linear-gradient( 154deg, rgb(1, 51, 115) 0%, rgb(20, 132, 188) 100%);
-  max-width: 1280px;
+  max-width: 1050px;
   justify-content: space-between;
 }
 
@@ -204,6 +204,9 @@ h3 {
   }
   .heroBox-text {
     padding: 1rem;
+  }
+  .heroBox img {
+    object-fit: contain;
   }
 }
 
